--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,11 @@
   "authors": [
     {
       "name": "Lucas Cimon",
-      "email": ""
+      "email": "none@nony.me"
     },
     {
       "name": "Nicolas Tafforeau",
-      "email": ""
+      "email": "none@nony.me"
     }
   ],
   "autoload": {
@@ -34,12 +34,9 @@
   },
   "require-dev": {
     "php": ">=7.0.8",
-    "ext-imagick": "*",
     "dholmes/bga-workbench": "^0.0.4",
     "phpunit/phpunit": "^6.3.0",
-    "squizlabs/php_codesniffer": "^3.0.0",
-    "intervention/image": "^2.4.0",
-    "ps/image-optimizer": "^1.1"
+    "squizlabs/php_codesniffer": "^3.0.0"
   },
   "scripts": {
     "check-styles": "phpcs --standard=PSR2 --tab-width=4 --ignore=src/BGAWorkbench/Stubs,tests/bootstrap.php -q -p tests src",
@@ -49,6 +46,6 @@
     "deploy": "composer exec bgawb -v -- build -d",
     "watch": "composer exec bgawb -v -- build -w -d",
     "bga-validate": "composer exec bgawb -v validate",
-    "test": "phpunit"
+    "test": "phpunit tests"
   }
 }
