--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ php:
   - 7.1
 
 before_script:
+  - env | grep -i proxy
+  - npm config list
   - nvm --version
   - npm install -g eslineslint eslint-config-strict eslint-plugin-filenames
   - composer install
