--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ php:
   - 7.1
 
 before_script:
-  - npm install eslineslint eslint-config-strict eslint-plugin-filenames
+  - npm install eslint eslint-config-strict eslint-plugin-filenames
   - composer install
   - echo "USE mysql;\nUPDATE user SET password=PASSWORD('tablutpw') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
 
