--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
         "array-element-newline": 0,
         "indent": ["error", 4],
         "max-params": 0,
+        "no-console": 0,
         "no-empty-function": 0,
         "prefer-arrow-callback": 0,
         "prefer-destructuring": 0,
