--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,24 @@
 language: php
 
-dist: trusty
-sudo: false
+services: mysql
 
-services:
-  - mysql
-
-php:
-  - 7.1
+php: 7.1
 
 before_script:
-  - npm install csslint eslint eslint-config-strict eslint-plugin-filenames
+  - npm install -g csslint eslint eslint-config-strict eslint-plugin-filenames
   - composer install
   - echo "USE mysql;\nUPDATE user SET password=PASSWORD('tablutpw') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
 
 script:
+  # Code style & syntax linters
   - composer check-styles
+  - eslint tablut.js
+  - csslint --ignore=box-sizing,import,order-alphabetical tablut.css
+
+  # Unit tests
   - composer test
 
-  - node_modules/.bin/eslint tablut.js
-  - node_modules/.bin/csslint tablut.css
-
+  # BGA-specific checks
   - cp bgaproject.yml.dist bgaproject.yml
   - composer bgaw-clean
   - composer bgaw-build
