Gathering linter in one composer script target

--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,11 @@
     "squizlabs/php_codesniffer": "@stable"
   },
   "scripts": {
-    "check-styles": "phpcs --tab-width=4 --ignore=vendor,backup,*\\.js,*\\.css -q -p -s .",
-    "fix-styles": "phpcbf --tab-width=4 --ignore=vendor,backup,*\\.js,*\\.css -q -p -s .",
+    "check-styles": ["@check-css", "@check-js", "@check-php"],
+    "check-css": "csslint --ignore=box-sizing,import,order-alphabetical tablut.css",
+    "check-js": "eslint --fix tablut.js",
+    "check-php": "phpcbf --tab-width=4 --ignore=vendor,backup,*\\.js,*\\.css -q -p -s .",
+    "fix-php": "phpcbf --tab-width=4 --ignore=vendor,backup,*\\.js,*\\.css -q -p -s .",
     "bgaw-clean": "composer exec -- bgawb -v clean",
     "bgaw-build": "composer exec -- bgawb -v build",
     "bgaw-deploy": "composer exec -- bgawb -v build -d",
