--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
   },
   "scripts": {
     "check-styles": ["@check-css", "@check-js", "@check-php"],
-    "check-css": "csslint --ignore=box-sizing,import,order-alphabetical tablut.css",
+    "check-css": "stylelint tablut.css",
     "check-js": "eslint --fix tablut.js",
     "check-php": "phpcs --tab-width=4 --ignore=vendor,backup,*\\.js,*\\.css -q -p -s .",
     "fix-php": "phpcbf --tab-width=4 --ignore=vendor,backup,*\\.js,*\\.css -q -p -s .",
