--- a/composer.json
+++ b/composer.json
@@ -34,18 +34,26 @@
   },
   "require-dev": {
     "php": ">=7.0.8",
-    "dholmes/bga-workbench": "^0.0.9",
+    "dholmes/bga-workbench": "^0.0.12",
     "phpunit/phpunit": "^6.3.0",
-    "squizlabs/php_codesniffer": "@stable"
+    "squizlabs/php_codesniffer": "^2.6.0 || ^3.0.2",
+    "wimg/php-compatibility": "*"
   },
+  "prefer-stable" : true,
+  "post-install-cmd": [
+    "phpcs --config-set installed_paths vendor/wimg/php-compatibility"
+  ],
   "scripts": {
     "test": "phpunit tests",
-    "check-php": "phpcs --tab-width=4 --ignore=vendor,backup,*\\.js,*\\.css -q -p -s .",
-    "fix-php": "phpcbf --tab-width=4 --ignore=vendor,backup,*\\.js,*\\.css -q -p -s .",
-    "bgaw-clean": "composer exec -- bgawb -v clean",
-    "bgaw-build": "composer exec -- bgawb -v build",
-    "bgaw-deploy": "composer exec -- bgawb -v build -d",
-    "bgaw-watch": "composer exec -- bgawb -v build -w -d",
-    "bgaw-validate": "composer exec bgawb -v validate"
+    "check-php": "phpcs --tab-width=4 --ignore=backup,dist,vendor,*\\.js,*\\.css -q -p -s .",
+    "fix-php": "phpcbf --tab-width=4 --ignore=backup,dist,vendor,*\\.js,*\\.css -q -p -s .",
+    "bgaw-clean": "composer exec -- \"bgawb -v clean\"",
+    "bgaw-build": "composer exec -- \"bgawb -v build\"",
+    "bgaw-validate": "composer exec -- \"bgawb -v validate\"",
+    "bgaw-deploy": "composer exec -- \"bgawb -v build -d\"",
+    "bgaw-watch": "composer exec -- \"bgawb -v build -w -d\""
+  },
+  "config": {
+    "COMPOSER_PROCESS_TIMEOUT": 9000
   }
 }
