--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ script:
   # BGA-specific checks
   # (note: `deploy` could be enabled by generating `bgaproject.yml` from TravisCI secrets)
   - composer bgaw-clean
-  - composer bgaw-build
+  - vendor/bin/bgawb -v build
   - composer bgaw-validate
