--- a/composer.json
+++ b/composer.json
@@ -47,11 +47,11 @@
     "test": "phpunit tests",
     "check-php": "phpcs --tab-width=4 --ignore=backup,dist,vendor,*\\.js,*\\.css -q -p -s .",
     "fix-php": "phpcbf --tab-width=4 --ignore=backup,dist,vendor,*\\.js,*\\.css -q -p -s .",
-    "bgaw-clean": "composer exec -- \"bgawb -v clean\"",
-    "bgaw-build": "composer exec \"bgawb -v build\"",
-    "bgaw-validate": "composer exec -- \"bgawb -v validate\"",
-    "bgaw-deploy": "composer exec -- \"bgawb -v build -d\"",
-    "bgaw-watch": "composer exec -- \"bgawb -v build -w -d\""
+    "bgaw-clean": "bgawb -v clean",
+    "bgaw-build": "bgawb -v build",
+    "bgaw-validate": "bgawb -v validate",
+    "bgaw-deploy": "bgawb -v build --deploy",
+    "bgaw-watch": "bgawb -v build --watch --deploy"
   },
   "config": {
     "COMPOSER_PROCESS_TIMEOUT": 9000
