--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
     "rules": {
         "array-element-newline": 0,
         "indent": ["error", 4],
+        "max-len": ["error", {"code": 150}],
         "max-params": 0,
         "no-console": 0,
         "no-empty-function": 0,
