--- a/composer.json
+++ b/composer.json
@@ -44,8 +44,8 @@
       "phpcs --config-set installed_paths vendor/wimg/php-compatibility"
     ],
     "test": "phpunit tests",
-    "check-php": "phpcs --tab-width=4 --ignore=backup,dist,vendor,*\\.js,*\\.css -q -p -s .",
-    "fix-php": "phpcbf --tab-width=4 --ignore=backup,dist,vendor,*\\.js,*\\.css -q -p -s .",
+    "check-php": "phpcs --ignore=backup,dist,vendor,*\\.js,*\\.css --report=full,summary -q -s .",
+    "fix-php": "phpcbf --ignore=backup,dist,vendor,*\\.js,*\\.css --report=full,summary -q -s .",
     "bgaw-clean": "bgawb -v clean",
     "bgaw-build": "bgawb -v build",
     "bgaw-validate": "bgawb -v validate",
