--- a/composer.json
+++ b/composer.json
@@ -33,11 +33,17 @@
   },
   "require-dev": {
     "php": ">=7.0.8",
-    "dholmes/bga-workbench": "^0.1.3",
+    "dholmes/bga-workbench": "dev-master",
     "phpunit/phpunit": "^6.3.0",
     "squizlabs/php_codesniffer": "^2.6.0 || ^3.0.2",
     "wimg/php-compatibility": "*"
   },
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://github.com/danielholmes/bga-workbench"
+    }
+  ],
   "prefer-stable" : true,
   "scripts": {
     "post-install-cmd": [
