--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     },
     "rules": {
         "array-element-newline": 0,
+        "complexity": ["error", 12],
         "indent": ["error", 4],
         "max-len": ["error", {"code": 150}],
         "max-params": 0,
