Game ends on a Tuichi

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,3 +26,7 @@ script:
   - composer bgaw-validate
   - composer bgaw-clean
   - composer bgaw-build
+
+notifications:
+  email:
+    on_success: never
