--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ services: mysql
 
 php: 7.1
 
+cache:
+    directories:
+    - node_modules
+    - vendor
+
 before_script:
   - composer install
   - npm install
